# llm-research

./: .gitignore  Makefile  README.md  download_model_vocab.py  download_vocab.py  pyproject.toml  vocab_overlapping_experiment.ipynb  vocab_overlapping_ratio.ipynb
examples/: vocab_overlapping_ratio.ipynb
experiments/llm_vocab_fusion/: download_vocab.py  vocab_overlapping_experiment.ipynb
experiments/llm_vocab_fusion/vocab/: CodeLlama-34b-Instruct-hf.json  Llama-2-13b-chat-hf.json  Llama-2-70b-chat-hf.json  Llama-2-7b-chat-hf.json  Mistral-7B-v0.1.json  Mixtral-8x7B-Instruct-v0.1.json  Starling-LM-7B-beta.json  WizardLM-70B-V1.0.json  Yi-34B-Chat.json  openchat-3.5-0106.json  vicuna-13b-v1.5.json
experiments/llm_vocab_fusion/vocab/common_english_words/: oxford_5000.txt
vocab/: CodeLlama-34b-Instruct-hf.json  Llama-2-13b-chat-hf.json  Llama-2-70b-chat-hf.json  Llama-2-7b-chat-hf.json  Mistral-7B-v0.1.json  Mistral-7B-v0.1_vocab.txt  Mixtral-8x7B-Instruct-v0.1.json  Starling-LM-7B-beta.json  WizardLM-70B-V1.0.json  Yi-34B-Chat.json  Yi-34B-Chat_vocab.txt  mistral-7b-v0.1_vocab.json  openchat-3.5-0106.json  vicuna-13b-v1.5.json  yi-34b-chat_vocab.json
vocab/meta-llama/: Llama-2-13b-chat-hf.json
vocab/model/: Mistral-7B-v0.1_vocab.txt  Starling-LM-7B-beta_vocab.txt  Yi-34B-Chat_vocab.txt  openchat-3.5-0106_vocab.txt  vicuna-33b-v1.3_vocab.txt
