[tool.poetry]
name = "llm-research"
version = "0.1.0"
description = ""
authors = ["ryker_chang <ryker_chang@trendmicro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.39.2"
torch = "^2.2.2"
timm = "^0.9.16"
sentencepiece = "^0.2.0"
protobuf = "^5.26.1"
matplotlib-venn = "^0.11.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = {extras = ["jupyter"], version = "^24.3.0"}
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
